fix(trix-editors): now with a working scrollbar

--- a/app/front_assets/stylesheets/components/richtext.scss
+++ b/app/front_assets/stylesheets/components/richtext.scss
@@ -39,5 +39,6 @@ body{
     border-top-right-radius: 0;
     border-bottom-left-radius: .5rem;
     border-bottom-right-radius: .5rem;
+    overflow-y: auto;
   }
 }
